lang.java.statics.test/tests/packages/classes-with-same-name-in-toplevel-package.no.spt
module packages/classes-with-same-name-in-toplevel-package_no

language metaborg-java

test classes-with-same-name-in-toplevel-package [[

test;



// error: duplicate class

[p] {

    [A]
    package p;
    public class A {}

    [A]
    package p;
    public class A {}

}

]] analysis fails
   run javacFails to ""
